oxiplate-derive/tests/broken/strings/missing-quote-after-hashes.stderr
error: Malformed raw string. Expected `"` after opening hashes
 --> tests/broken/strings/missing-quote-after-hashes.rs:4:27
  |
4 | #[oxiplate_inline(r###"{{ ##hello world"## }}"###)]
  |                           ^^
